      instead of the already scaled pixbuf that is shown in MComix' display
      area. In addition, fixed zero division error when trying to use the lens
      on images with width greatly exceeding height.

    - Menu item hotkeys can now be changed by hovering over a menu item with
      the mouse and pressing the desired key, or key combination.
      (by Juha Sahakangas and Alan Horkan)

MComix 0.96
Release date: 24.12.2011

    - Opening a RAR archive with 7z would destroy the archive, leaving only
      a 0-byte file. This has been fixed.

    - Fixed MComix opening files in other directories after scrolling past the
      first page, even when "Automatically open next directory" was disabled.

    - Fixed a bug that would hang MComix when trying to open a
      password-protected RAR archive.

    - MComix no longer restores the last opened file when it was terminated
      abnormally.

    - Files opened outside of archives are now naturally sorted (e.g. 1.jpg,
      2.jpg, 10.jpg instead of 1.jpg, 10.jpg, 2.jpg). Before, only images
      within archives were naturally sorted.

    - The preference option "Show only one page where appropriate" has been
      split up to allow controlling whether certain pages should be displayed
      as single page in double page mode (title pages/wide pages/none).

    - "Delete" is now bound to "DEL" instead of "F8" for consistency with most
      other desktop applications.

    - Updated traditional Chinese translation (by Wayne Su).

MComix 0.95
Release date: 05.11.2011

    - mcomix/mcomixstarter.py has been moved out of the mcomix package into
      the root directory of the mcomix distribution.

      Note for packagers: Please do not directly symlink a file in /usr/bin to
      mcomix/run.py! Use the wrapper generated by 'setup.py install' instead,
      or a script similar to mcomixstarter.py.

    - Fixed library freezing up when displaying large amounts of books.