@@ -14,6 +14,8 @@ prefs = {
     'number of key presses before page turn': 3,
     'auto open next archive': True,
     'auto open next directory': True,
+    'sort by': constants.SORT_NAME,
+    'sort descending': False,
     'bg colour': (5000, 5000, 5000),
     'thumb bg colour': (5000, 5000, 5000),
     'smart bg': False,
